--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,10 @@
         />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <script
+            src="https://kit.fontawesome.com/44b7fceee7.js"
+            crossorigin="anonymous"
+        ></script>
 
         <title>Watch N Track</title>
     </head>
